# New-Project

./: goorm.manifest  org.example.App.json  readme.md
data/: org.example.App.desktop.in  org.example.App.gschema.xml
gnome-builder/: meson.build
gnome-builder/data/: org.example.App.desktop.in
gnome-builder/src/: newproject-window.c  newproject.gresource.xml
jupyter-notebook/: New-Project.ipynb  app.json
jupyter-notebook/schema/: haxe-project-schema.json  haxe-schema-test.json
po/: POTFILES
src/: main.c  meson.build  newproject-window.h  newproject-window.ui
ui/: app.ui
vscode-extension/: README.md  package-lock.json  package.json
vscode-extension/src/: extension.ts
